change html-structure and scss in header (nav-menu)

--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -14,14 +14,22 @@
   margin-bottom: 25px;
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
 .navigation__menu {
   display: flex;
-  margin: 0 0 0 93px;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 93px;
+  width: 100%;
+}
+
+// .navigation {
+//   display: flex;
+//   align-items: center;
+// }
+
+.navigation__list {
+  display: flex;
+  margin: 0;
   padding: 0;
   list-style: none;
 }
