fix max length 1600 for bg in hero

--- a/css/main.css
+++ b/css/main.css
@@ -408,8 +408,15 @@ img {
 }
 
 .section-hero {
+  padding: 0px;
+}
+
+.section-hero__thumb {
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
+  max-width: 1600px;
   background-color: #c4c4c4;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/img-bg-hero.jpg");
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/img-bg-hero.jpg");
