--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -8,7 +8,7 @@ body {
 
 img {
   display: block;
-  max-width: 100%;
+  max-height: 100%;
 }
 
 *:focus {
@@ -18,15 +18,29 @@ img {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
 }
 
 .container {
-  width: 1200px;
+  min-width: 320px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-}
 
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
