--- a/sass/components/_section-advantages.scss
+++ b/sass/components/_section-advantages.scss
@@ -1,19 +1,37 @@
 .section-advantages {
-  padding-bottom: 0;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
+  }
 }
 
 .advantage {
-  display: flex;
   margin: 0;
   padding: 0;
   list-style: none;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * 30px);
+    margin-left: calc(-1 * 30px);
+  }
 }
 
 .advantage__item {
-  width: 270px;
+  width: 100%;
 
   &:not(:first-child) {
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
     margin-left: 30px;
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
   }
 }
 
@@ -21,12 +39,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
-  height: 120px;
   margin-bottom: 30px;
+  height: 120px;
+  width: 100%;
   background-color: var(--third-bg-color);
   border-radius: 4px;
   border: none;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 
 .advantage__title {
@@ -34,8 +60,13 @@
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  @media screen and (max-width: 480px) {
+    text-align: center;
+  }
 }
 
 .advantage__description {
@@ -43,6 +74,7 @@
   margin-bottom: 0;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
   color: var(--secondary-txt-color);
 }
