--- a/sass/components/_section-case.scss
+++ b/sass/components/_section-case.scss
@@ -1,6 +1,10 @@
-
+.section-case {
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+}
 .section-case__title {
-  margin-top: 0;  
+  margin-top: 0;
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
