--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -5,9 +5,7 @@
 .section-hero__thumb {
   margin-left: auto;
   margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
+  padding: 118px 0;
   background-color: #c4c4c4;
   background-image: linear-gradient(
       to right,
@@ -18,20 +16,31 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+    max-width: 1600px;
+  }
 }
 
 .section-hero__title {
   margin-top: 0;
   margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.615;
   letter-spacing: 0.06em;
-  color: #fff;
+  color: var(--current-txt-color);
   text-align: center;
   text-transform: uppercase;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.364;
+  }
 }
 
+/*ПЕРЕКИНУТЬ ТЕНЬ НА HOVER И FOCUS*/
 .section-hero__button {
   display: block;
   margin-left: auto;
