--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,10 +1,16 @@
 .logo {
   font-family: var(--secondary-font-name), var(--secondary-font-family);
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.167;
+  letter-spacing: 0.03em;
   color: var(--accent-color);
   text-decoration: none;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.192;
+  }
 }
 
 .logo__studio--black {
@@ -14,4 +20,3 @@
 .logo__studio--white {
   color: #fff;
 }
-
