--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,8 +1,46 @@
-
 .page-footer {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--secondary-bg-color);
+}
+
+.page-footer__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: space-around;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: wrap;
+    justify-content: start;
+  }
+}
+
+.sign-container--mobile {
+  @media screen and (max-width: 1199px) {
+    margin-top: 60px;
+  }
+}
+
+.join-offer--mobile {
+  @media screen and (max-width: 767px) {
+    margin-top: 60px;
+  }
+}
+
+.address-container {
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 85px;
+    text-align: start;
+  }
 }
 
 .page-footer__logo {
@@ -10,26 +48,39 @@
   margin-bottom: 20px;
 }
 
-.address-container {
-  margin-right: 83px;
-}
-
 .address {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
-  color: #fff;
+  letter-spacing: 0.03em;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
+  color: var(--current-txt-color);
+}
+
+.address__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .address__item {
-  margin-top: 9px;
+  margin-top: 8px;
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 9px;
+  }
 }
 
 .address__link {
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
   color: var(--third-txt-color);
   text-decoration: none;
   transition: color var(--delay) var(--time-function);
@@ -41,9 +92,9 @@
 }
 
 .join-offer {
-  width: 206px;
-  max-height: 80px;
-  margin-right: 93px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+  }
 }
 
 .join-offer__title {
@@ -53,6 +104,11 @@
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
   text-transform: uppercase;
   color: var(--current-txt-color);
 }
@@ -74,16 +130,10 @@
   }
 }
 
-.page-footer__container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: baseline;
-}
-
-.address__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.sign-container {
+  @media screen and (max-width: 1199px) {
+    width: 100%;
+  }
 }
 
 .sign-container__title {
@@ -93,18 +143,40 @@
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
+
   text-transform: uppercase;
   color: var(--current-txt-color);
 }
 
 .sign-form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .sign-form__email {
   padding-left: 16px;
   padding-right: 16px;
-  width: 358px;
+  width: 100%;
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
+
   height: 50px;
   font-weight: 400;
   font-size: 16px;
@@ -127,10 +199,10 @@
 }
 
 .sign-button {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 12px;
+  margin-top: 20px;
   padding: 0;
   width: 200px;
   height: 50px;
@@ -144,6 +216,11 @@
   border-radius: 4px;
   cursor: pointer;
   transition: box-shadow var(--delay) var(--time-function);
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 0;
+    margin-left: 12px;
+  }
 
   &:hover {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
