--- a/sass/components/_section-case.scss
+++ b/sass/components/_section-case.scss
@@ -3,12 +3,14 @@
     display: none;
   }
 }
+
 .section-case__title {
   margin-top: 0;
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.17;
+  line-height: 1.167;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
