--- a/css/main.css
+++ b/css/main.css
@@ -987,24 +987,48 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 0;
-  margin-bottom: 50px;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: -15px;
+  margin-bottom: 40px;
   padding-left: 0;
   list-style: none;
+}
+
+@media screen and (min-width: 768px) {
+  .section-portfolio__button-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-portfolio__button-list {
+    margin-bottom: 50px;
+  }
 }
 
 .section-portfolio__button-item:not(:last-child) {
   margin-right: 8px;
 }
 
+@media screen and (max-width: 767px) {
+  .section-portfolio__button-item {
+    margin-top: 15px;
+  }
+}
+
 .section-portfolio__button {
   padding: 6px 22px;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.63;
+  line-height: 1.625;
   letter-spacing: 0.03em;
   color: var(--main-txt-color);
   text-align: center;
@@ -1029,25 +1053,45 @@ img {
 
 .section-portfolio__work-list {
   --card-set-gap: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-right: 0;
-  margin-bottom: 0;
-  margin-left: calc(-1 * var(--card-set-gap));
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
+@media screen and (min-width: 768px) {
+  .section-portfolio__work-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
+}
+
 .card {
-  -ms-flex-preferred-size: calc(100% / 3 - var(--card-set-gap));
-      flex-basis: calc(100% / 3 - var(--card-set-gap));
-  margin-top: var(--card-set-gap);
-  margin-left: var(--card-set-gap);
   background-color: #fff;
+}
+
+.card:not(:first-child) {
+  margin-top: var(--card-set-gap);
+}
+
+@media screen and (min-width: 768px) {
+  .card {
+    -ms-flex-preferred-size: calc((100% - 2 * var(--card-set-gap)) / 2);
+        flex-basis: calc((100% - 2 * var(--card-set-gap)) / 2);
+    margin-top: var(--card-set-gap);
+    margin-left: var(--card-set-gap);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card {
+    -ms-flex-preferred-size: calc((100% - 3 * var(--card-set-gap)) / 3);
+        flex-basis: calc((100% - 3 * var(--card-set-gap)) / 3);
+  }
 }
 
 .card__link {
@@ -1070,6 +1114,23 @@ img {
   overflow: hidden;
 }
 
+/*ВРЕМЕННЫЙ КОСТЫЛЬ*/
+.card__thumb > img {
+  max-width: 480px;
+}
+
+@media screen and (min-width: 768px) {
+  .card__thumb > img {
+    max-width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card__thumb > img {
+    max-width: 370px;
+  }
+}
+
 .card__overlay {
   position: absolute;
   top: 0;
@@ -1080,10 +1141,16 @@ img {
   transition: -webkit-transform var(--delay) var(--time-function);
   transition: transform var(--delay) var(--time-function);
   transition: transform var(--delay) var(--time-function), -webkit-transform var(--delay) var(--time-function);
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  padding: 24px 24px;
+  /***/
   /* background-color: rgba(33, 150, 243, 0.9); */
   background-color: var(--current-bg-color);
   opacity: 0.9;
@@ -1104,7 +1171,21 @@ img {
   color: var(--current-txt-color);
 }
 
+.card__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
 .card__info-container {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid #eee;
   border-top: none;
@@ -1124,7 +1205,8 @@ img {
   margin: 0;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
   color: var(--secondary-txt-color);
 }
 
