--- a/sass/utils/_utilites.scss
+++ b/sass/utils/_utilites.scss
@@ -22,11 +22,11 @@
 // h3,
 // p,
 // a,
-// img,
+// // img,
 // section,
 // button,
 // form,
 // input,
 // svg {
 //   outline: 1px solid tomato;
-// } 
+// }
