--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,12 @@ img {
   width: 100%;
 }
 
+@media screen and (max-width: 767px) {
+  .navigation__menu {
+    display: none;
+  }
+}
+
 .navigation__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1234,8 +1240,7 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
-  min-height: 581px;
+  width: calc(100% - 30px);
   padding: 40px;
   background-color: var(--main-bg-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1245,6 +1250,18 @@ img {
   transition: -webkit-transform var(--delay) var(--time-function);
   transition: transform var(--delay) var(--time-function);
   transition: transform var(--delay) var(--time-function), -webkit-transform var(--delay) var(--time-function);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -1291,9 +1308,15 @@ img {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.15;
+  }
 }
 
 .submit-button {
@@ -1445,11 +1468,18 @@ img {
   user-select: none;
   margin-top: 20px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
+  font-size: 12px;
+  line-height: 1.167;
   letter-spacing: 0.03em;
   color: var(--secondary-txt-color);
   text-align: center;
+}
+
+@media screen and (mai-width: 1200px) {
+  .modal-form__checkbox-label {
+    font-size: 14px;
+    line-height: 1.714;
+  }
 }
 
 .modal-form__checkbox-link {
@@ -1460,6 +1490,8 @@ img {
 
 .modal-form__checkbox-icon {
   margin-right: 8px;
+  min-width: 16px;
+  height: 15px;
   fill: var(--accent-color);
   background-color: transparent;
   border: 2px solid black;
