--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -15,6 +15,10 @@
 }
 
 .navigation__menu {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
   display: flex;
   justify-content: space-between;
   align-items: center;
