--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -73,21 +73,43 @@
 
 .communication {
   display: flex;
-  margin: 0 0 0 auto;
+  // flex-wrap: wrap;
+  flex-direction: column;
+
+  @media screen and (min-width: 768px) {
+    margin: 0 0 0 auto;
+  }
+
+  @media screen and (min-width: 1200px) {
+    // flex-wrap: nowrap;
+    flex-direction: row;
+  }
+
   padding: 0;
   list-style: none;
 }
 
 .communication__item:not(:first-child) {
-  margin-left: 30px;
+  @media screen and (min-width: 768px) {
+    margin-top: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 0;
+    margin-left: 30px;
+  }
 }
 
 .communication__link {
   display: flex;
   align-items: center;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.167;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.143;
+  }
   letter-spacing: 0.02em;
   color: var(--secondary-txt-color);
   text-decoration: none;
@@ -100,6 +122,24 @@
 }
 
 .communication__icon {
-  margin-right: 10px;
+  margin-right: 8px;
   fill: currentColor;
+
+  @media screen and(min-width:1200px) {
+    margin-right: 10px;
+  }
+
+  &--mail {
+    @media screen and (max-width: 1199px) {
+      width: 14px;
+      height: 10px;
+    }
+  }
+
+  &--smartphone {
+    @media screen and (max-width: 1199px) {
+      width: 10px;
+      height: 14px;
+    }
+  }
 }
